--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <iframe src="https://feversocial.com/event0/bk2o_page-16019"></iframe>
+  <p>BK2O Smart Health Technology Corporation</p
 </body>
 </html>
