--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL='https://feversocial.com/event0/bk2o_page-16019'" />
+  </head>
 <body>
-  <p>BK2O Smart Health Technology Corporation</p
+  
 </body>
 </html>
